--- a/package.json
+++ b/package.json
@@ -1,4 +1,13 @@
 {
+  "homepage": "https://<your-username>.github.io/<your-repo>",
+  "scripts": {
+    "web:build": "npx expo export --platform web",
+    "web:404": "copy dist\\index.html dist\\404.html",          // Windows
+    // "web:404": "cp dist/index.html dist/404.html",           // macOS/Linux
+    "deploy": "npm run web:build && npm run web:404 && gh-pages -d dist"
+  }
+}
+{
   "name": "expo-four-tabs-s53",
   "version": "1.0.0",
   "private": true,
