--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "web:build": "npx expo export --platform web",
     "web:404": "copy dist\\index.html dist\\404.html",          
-     //"web:404": "cp dist/index.html dist/404.html",          
+     \\"web:404": "cp dist/index.html dist/404.html",          
     "deploy": "npm run web:build && npm run web:404 && gh-pages -d dist"
   
 },
